# TextToSQL

./: main.py  notebook.ipynb  pyproject.toml
