[project]
name = "texttosql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.1.2",
    "pymysql>=1.1.1",
    "transformers>=4.51.3",
]
